# pgroles

./: .dockerignore  AGENTS.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml
.github/actions/setup-e2e/: action.yml
.github/workflows/: ci.yml  docs-pages.yml  helm-chart-release.yml  operator-fairness-load.yml  release.yml
charts/pgroles-operator/: Chart.yaml  artifacthub-repo.yml  values.yaml
charts/pgroles-operator/crds/: postgrespolicies.pgroles.io.yaml  postgrespolicyplans.pgroles.io.yaml
charts/pgroles-operator/templates/: NOTES.txt  clusterrole.yaml  deployment.yaml
correctness/: Dockerfile  README.md  run-tlc.sh
correctness/races/: PlanConcurrency.cfg  PlanConcurrency.tla  PlanConcurrency_TTrace_1775898648.tla  PlanConcurrency_TTrace_1775898695.tla  PlanConcurrency_TTrace_1775898732.tla  PlanLifecycle.cfg  PlanLifecycle.tla  PlanLifecycle_TTrace_1775897965.tla  PlanLifecycle_TTrace_1775897995.tla  PlanStorage.cfg  PlanStorage.tla
crates/pgpolicy-cli/src/: main.rs
crates/pgpolicy-cli/tests/: cli.rs
crates/pgpolicy-core/: Cargo.toml
crates/pgpolicy-core/src/: manifest.rs  sql.rs
crates/pgpolicy-inspect/src/: defaults.rs  privileges.rs
crates/pgpolicy-operator/: Cargo.toml
crates/pgpolicy-operator/src/: context.rs  crd.rs  lib.rs  main.rs  reconciler.rs
crates/pgroles-cli/: Cargo.toml
crates/pgroles-cli/src/: lib.rs  main.rs
crates/pgroles-cli/tests/: cli.rs
crates/pgroles-core/: Cargo.toml
crates/pgroles-core/src/: composition.rs  diff.rs  export.rs  lib.rs  manifest.rs  model.rs  ownership.rs  report.rs  scram.rs  sql.rs  suggest.rs  visual.rs
crates/pgroles-core/tests/: suggest_property.rs
crates/pgroles-inspect/: Cargo.toml  README.md
crates/pgroles-inspect/src/: cloud.rs  lib.rs  memberships.rs  privileges.rs  public_grants.rs  roles.rs  safety.rs  version.rs
crates/pgroles-operator/: Cargo.toml  README.md
crates/pgroles-operator/src/: advisory.rs  context.rs  crd.rs  events.rs  lib.rs  main.rs  observability.rs  password.rs  plan.rs  reconciler.rs
docker/: Dockerfile  Dockerfile.e2e  Dockerfile.runtime  compose.yaml
docs/: BRAND.md  next.config.js  package-lock.json  package.json  tailwind.config.js
docs/design/: role-graph-visualization.md
docs/markdoc/: tags.js
docs/src/components/: Button.jsx  Callout.jsx  Hero.jsx  Icon.jsx  Layout.jsx  Logo.jsx  MobileNavigation.jsx  Navigation.jsx  OperatorArchitectureDiagram.jsx  OperatorReconciliationDiagram.jsx  Prose.jsx  QuickLinks.jsx  ThemeSelector.jsx  WorkspaceDataFlowDiagram.jsx
docs/src/pages/: _app.jsx  _document.jsx  index.md
docs/src/pages/docs/: adoption.md  alternatives.md  architecture.md  aws-rds.md  ci-cd.md  cli.md  default-privileges.md  google-cloud-sql.md  grants.md  installation.md  manifest-format.md  memberships.md  operator-architecture.md  operator.md  profiles.md  quick-start.md  terraform.md
examples/: custom-pattern.yaml  minimal.yaml  multi-schema.yaml  password-roles.yaml
k8s/: crd.yaml  postgrespolicyplan-crd.yaml
k8s/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
k8s/dev/: otel-collector.yaml  postgres.yaml
k8s/samples/: auto-approval-policy.yaml  basic-policy.yaml  conflicting-policy.yaml  disjoint-policy.yaml  empty-password-secret-policy.yaml  generated-password-policy.yaml  insufficient-privileges-policy.yaml  invalid-policy.yaml  missing-password-secret-policy.yaml  missing-secret-policy.yaml  multi-schema-policy-a.yaml  multi-schema-policy-b.yaml  params-connection-policy.yaml  params-e2e-policy.yaml  password-policy.yaml  plan-approval-policy.yaml  plan-policy.yaml  schema-owner-policy.yaml  second-disjoint-policy.yaml
scripts/: check-crd-drift.sh  e2e-helpers.sh  generate-load-policy.sh
tests/fixtures/: smoke-test.yaml
