[workspace]
members = [
    "crates/pgroles-core",
    "crates/pgroles-inspect",
    "crates/pgroles-cli",
    "crates/pgroles-operator",
]
resolver = "2"

[workspace.package]
version = "0.7.0-beta.1"
edition = "2024"
authors = ["Brian Thorne <brian@thorne.link>"]
license = "MIT"
repository = "https://github.com/hardbyte/pgroles"
homepage = "https://github.com/hardbyte/pgroles"
readme = "README.md"
keywords = ["postgresql", "roles", "privileges", "database", "infrastructure"]
categories = ["database", "command-line-utilities"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1.52.1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
axum = "0.8.9"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"] }

# Kubernetes
kube = { version = "3.1.0", features = ["runtime", "derive", "client", "unstable-runtime"] }
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
schemars = "1"

# Internal crates
pgroles-core = { path = "crates/pgroles-core", version = "0.7.0-beta.1" }
pgroles-inspect = { path = "crates/pgroles-inspect", version = "0.7.0-beta.1" }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
