[package]
name = "pgpolicy-operator"
description = "Kubernetes operator for pgpolicy — reconciles PostgresPolicy CRDs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pgpolicy_operator"
path = "src/lib.rs"

[dependencies]
pgpolicy-core = { workspace = true }
pgpolicy-inspect = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "pgpolicy-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"
