[package]
name = "pgroles-cli"
description = "CLI tool for pgroles — validate, diff, plan, and apply PostgreSQL role policies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pgroles"
path = "src/main.rs"

[dependencies]
pgroles-core = { workspace = true }
pgroles-inspect = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
