[package]
name = "pgroles-cli"
description = "CLI for pgroles — validate, diff, apply, inspect, and generate role policies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "pgroles"
path = "src/main.rs"

[dependencies]
pgroles-core = { workspace = true }
pgroles-inspect = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3"
tempfile = "3"
