[package]
name = "pgroles-core"
description = "Core manifest, diff, SQL rendering, and export primitives for pgroles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

# SCRAM-SHA-256 verifier computation
sha2 = "0.11"
hmac = "0.13"
pbkdf2 = "0.13.0"
base64 = "0.22.1"
rand = "0.10.1"
zeroize = "1"
