[package]
name = "pgroles-operator"
description = "Kubernetes operator for pgroles — reconciles PostgresPolicy CRDs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "pgroles_operator"
path = "src/lib.rs"

[dependencies]
pgroles-core = { workspace = true }
pgroles-inspect = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
rand = "0.10.1"
jiff = "0.2.23"
base64 = "0.22.1"
sha2 = "0.11"
percent-encoding = "2.3.2"
flate2 = "1.1.5"

[[bin]]
name = "pgroles-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"
